input type date width, text align fixed

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -858,6 +858,13 @@
 .common-input-list__field input[type='hidden']{
     display: none !important;
 }
+.common-input-list__field input[type='date']{
+    display: block;
+    -webkit-appearance: none;
+}
+.common-input-list__field input[type='date']::-webkit-date-and-time-value{
+    text-align: left;
+}
 .common-textarea{
     width: 100%;
     height: 200px;
